--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.511.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-qr-code": "^2.0.16",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3"
   },
